--- a/BluetoothPrinterApp/src/main/res/layout/activity_main.xml
+++ b/BluetoothPrinterApp/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".modules.main.MainActivity">
+    tools:context=".modules.printer.list.PrinterListActivity">
 
     <com.bright.common.widget.TopBar
         android:id="@+id/top_bar"
@@ -22,28 +22,31 @@
         android:background="@color/windows_background_light">
 
         <ImageView
-            android:id="@+id/photo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:layout_marginTop="@dimen/dp_30"
+            android:id="@+id/wifi_status"
+            style="@style/ImageView.PrinterList.Top"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
             android:contentDescription="@null"
-            android:scaleType="center"
-            android:src="@drawable/connect_printer" />
+            android:src="@drawable/icon_wifi" />
 
-        <ProgressBar
-            android:id="@+id/loading"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-7dp"
-            android:indeterminate="true" />
+        <ImageView
+            style="@style/ImageView.PrinterList.Top"
+            android:layout_toStartOf="@id/wifi_status"
+            android:contentDescription="@null"
+            android:src="@drawable/icon_phone" />
+
+        <ImageView
+            style="@style/ImageView.PrinterList.Top"
+            android:layout_toEndOf="@id/wifi_status"
+            android:contentDescription="@null"
+            android:src="@drawable/icon_printer" />
 
         <TextView
             android:id="@+id/search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/photo"
+            android:layout_below="@id/wifi_status"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/dp_25"
             android:background="@drawable/grey_corner_max_line_bg"
