--- a/BluetoothPrinterApp/src/main/res/layout/item_printer_list.xml
+++ b/BluetoothPrinterApp/src/main/res/layout/item_printer_list.xml
@@ -5,14 +5,12 @@
     android:layout_height="match_parent"
     android:background="@drawable/no_line_bg"
     android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/gap_grade_3"
-    android:paddingTop="@dimen/gap_grade_3">
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="@dimen/dp_55"
-        android:layout_height="@dimen/dp_55"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30"
         android:layout_margin="@dimen/gap_grade_4"
         android:scaleType="centerInside"
         android:src="@drawable/icon_printer" />
@@ -36,14 +34,16 @@
             android:id="@+id/status_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/J_title"
-            tools:text="连接中" />
+            android:text="未连接"
+            android:textSize="@dimen/J_title" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/status_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/dp_8"
+        android:contentDescription="@null"
         android:padding="@dimen/gap_grade_4"
         android:scaleType="centerInside"
         android:src="@drawable/ic_selected" />
